--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["calorie_counting", "rock_paper_scissors"]
+members = ["calorie_counting", "rock_paper_scissors", "rucksack_reorganization"]
